@@ -36,6 +36,9 @@
 
 	Better "all" pseudo-option parsing and support of resetting it.
 
+	Do not display same path twice in detailed progress information (after
+	both "file" and "from").
+
 	Fixed pane titles update on switching panes.
 
 	Fixed build on OpenBSD.  Patch by Brian Callahan (a.k.a. ibara).
